package com.carebridge.entities.enums;

public enum PlanStatus {
    DRAFT,
    PUBLISHED
}