package com.carebridge.enums;

public enum ShiftStatus {
  OPEN,
  ASSIGNED,
  CANCELLED
}
