package com.carebridge.enums;

public enum ShiftType {
  DAY,
  EVENING,
  NIGHT,
  ON_CALL
}
